--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -35,7 +35,9 @@
 
 .event-image img{
     width: 100%;
-    height: 400px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     background: #008dd0;
     border-radius: 15px;
     display: flex;
